[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyterrier-genrerank"
version = "0.0.25"
description = "PyTerrier Interface for Generative Rerankers"
readme = "README.md"
requires-python = ">=3.6"
authors = [{ name = "Kaustubh Dhole", email = "kaustubh.dhole [AT] emory.edu" }]
keywords = [ "information retrieval", "large language models", "generative reranking"]
urls = { "homepage" = "https://github.com/emory-irlab/pyterrier_genrank" }
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]